# storybook-creator

./: .gitignore  README.md  main.py  pyproject.toml  story_config.example.json  story_config.json
core/: image_generator.py  story_creator.py  utils.py
examples/1/Maya_with_her_bouncy_curly_hai/: pages_manifest.json  story.txt
examples/2/: story_config.json
examples/2/Sam_loved_Sparkle_Bay_more_tha/: pages_manifest.json  story.txt
examples/3/: story_config.json
examples/3/Ella_giggled_in_the_sunny_gard/: pages_manifest.json  story.txt
examples/3/Ella_popped_on_her_polka-dot_s/: pages_manifest.json  story.txt
